added new swagger defs
