# model/pilot.go
@@ -1,0 +1,23 @@
+package model
+
+// Pilot represents a drone pilot
+type Pilot struct {
+	ID       int64
+	Name     string
+	Licensed bool
+	Address  string
+	Phone    string
+}
+
+// NewPilot returns a new Pilot instance
+func NewPilot() *Pilot {
+	var i = new(Pilot)
+
+	//i.Id = "a.assign(metadata.InstanceID)"
+	i.Name = "Fred Smith"
+	i.Licensed = true
+	i.Address = "98 Wallaby Way, Sydney AUS"
+	i.Phone = "+23 0903 91203"
+
+	return i
+}
